# Lyra

./: .gitignore  Cargo.toml  README.md  package.json  rust-toolchain.toml  tsconfig.json  turbo.json  vitest.config.ts
.agents/plugins/: marketplace.json
.github/workflows/: desktop-e2e.yml
.superpowers/brainstorm/: .last-token
.superpowers/sdd/: fidelity-ledger.md  progress.md  (+23 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/supercollider/: bootstrap.scd  compatibility-check.scd  sclang_conf.yaml  source-policy-v1.json  validate.scd
apps/desktop/src-tauri/resources/supercollider/fixtures/invalid/: ending-pattern.scd  forbidden-api.scd  infinite-language-loop.scd  over-amp.scd  oversized-synthdef.scd  short-dur.scd  syntax-error.scd
apps/desktop/src-tauri/resources/supercollider/fixtures/valid/: deep-space.scd  minimal-pulse.scd  organic-drift.scd  rainy-cabin.scd
apps/desktop/src-tauri/src/: commands.rs  ipc.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/music/: codex_client.rs  generation.rs  mod.rs  osc_protocol.rs  prompt.rs  runtime.rs  source_policy.rs  track_store.rs  validator.rs
apps/desktop/src-tauri/tests/: codex_client.rs  codex_generation_live.rs  generation.rs  osc_runtime.rs  runtime_lifecycle.rs  runtime_live.rs  source_policy.rs  track_store.rs  validator.rs
docs/: architecture.md
scripts/: build-supercollider-headless.sh  check-supercollider.sh
tooling/: package.json  repositoryScan.ts  tooling.test.ts
(+122 files in other folders)
